# voicekit

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: AmazonSTT.h  AmazonTTS.h  DeepgramSTT.h  DeepgramTTS.h  ElevenlabsTTS.h  GoogleSTT.h  I_STTModule.h  I_TTSModule.h  MicrosoftSTT.h  MicrosoftTTS.h  STTFactory.h  STTModuleBase.h  TTSCache.h  TTSFactory.h  TTSModuleBase.h  TranscribeManager.hpp  base64.hpp
sample/: CMakeLists.txt  main.cpp  tts-stream.cpp  tts.cpp
src/: AmazonSTT.cpp  AmazonTTS.cpp  DeepgramSTT.cpp  DeepgramTTS.cpp  ElevenlabsTTS.cpp  GoogleSTT.cpp  MicrosoftSTT.cpp  MicrosoftTTS.cpp  STTFactory.cpp  STTModuleBase.cpp  TTSCache.cpp  TTSFactory.cpp  TTSModuleBase.cpp  TranscribeManager.cpp
test/: test_stt.cpp
